<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.rohankanoo.homepage.EmployeeSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/eid"
                android:id="@+id/sid"
                style="@style/tv"/>

            <EditText
                android:text="@string/esid"
                android:id="@+id/eeid"
                android:background="@drawable/et"
                style="@style/et"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="Password"
                android:id="@+id/spass"
                style="@style/tv"/>

            <EditText
                android:text="@string/esid"
                android:id="@+id/eepass"
                android:background="@drawable/et"
                android:inputType="textPassword"
                style="@style/et"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="Confirm Password"
                android:id="@+id/sconfpass"
                style="@style/tv"/>

            <EditText
                android:text="@string/esid"
                android:id="@+id/eeconfpass"
                android:background="@drawable/et"
                android:inputType="textPassword"
                style="@style/et"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/fname"
                android:id="@+id/fname"
                style="@style/tv"/>

            <EditText
                android:text="@string/efname"
                android:id="@+id/efname"
                android:background="@drawable/et"
                style="@style/et"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/lname"
                android:id="@+id/lname"
                style="@style/tv"/>

            <EditText
                android:text="@string/elname"
                android:id="@+id/elname"
                android:background="@drawable/et"
                style="@style/et"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/category"
                android:id="@+id/category"
                style="@style/tv"/>

            <EditText
                android:text="@string/ebatch"
                android:id="@+id/ecategory"
                android:background="@drawable/et"
                style="@style/et"
                android:gravity="center"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/mail"
                android:id="@+id/mail"
                style="@style/tv"/>

            <EditText
                android:text="@string/email"
                android:id="@+id/email"
                android:background="@drawable/et"
                style="@style/et" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5">

                <TextView
                    android:text="@string/cnumber"
                    android:id="@+id/cnumber"
                    style="@style/tv"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <EditText
                    android:text="@string/e91"
                    android:id="@+id/e91"
                    android:background="@drawable/et"
                    android:gravity="center"
                    style="@style/et"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="2.5"
                    android:focusable="false"/>

                <EditText
                    android:text="@string/ecnumber"
                    android:id="@+id/ecnumber"
                    android:background="@drawable/et"
                    style="@style/et"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>

            <Button
                android:text="@string/btnSignup"
                android:background="@drawable/btn"
                android:id="@+id/signup"
                style="@style/btn"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>